# UniformPolygonTriangulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.cxx
Algorithm/: OptimalPolygonTriangulation.cpp  OptimalPolygonTriangulation.h  SquarePolygonIntersection.cpp  SquarePolygonIntersection.h  UniformPolygonTriangulation.cpp  UniformPolygonTriangulation.h
Data/output/: triangulation_result.stl
Utility/: ActorUtil.cpp  ActorUtil.h  CommonUtil.cpp  CommonUtil.h  GeometricObjectUtil.cpp  GeometricObjectUtil.h  IOUtil.cpp  IOUtil.h  MeshUtil.cpp  MeshUtil.h  PolygonUtil.cpp  PolygonUtil.h  TestUtil.cpp  TestUtil.h
